sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:10: error: not found: value i
    i=0
    ^AlgCombSort:11: error: not found: value i
    while(i+ecart < getNombreValeurs()){
          ^AlgCombSort:12: error: not found: value i
      if(plusPetit(i+1,i)){
                   ^AlgCombSort:12: error: not found: value i
      if(plusPetit(i+1,i)){
                       ^AlgCombSort:13: error: not found: value i
        echange(i,i+1)
                ^AlgCombSort:13: error: not found: value i
        echange(i,i+1)
                  ^AlgCombSort:14: error: not found: value i
        i += 1
        ^